THRIFT-1447. java: NullpointerException in ProcessFunction.class :in 'oneway' method

Patch: Ihor Mysak

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1244272 13f79535-47bb-0310-9956-ffa450edef68