lib/java/src/org/apache/thrift/ProcessFunction.java
@@ -30,11 +30,15 @@ public abstract class ProcessFunction<I, T extends TBase> {
     }
     iprot.readMessageEnd();
     TBase result = getResult(iface, args);
-    oprot.writeMessageBegin(new TMessage(getMethodName(), TMessageType.REPLY, seqid));
-    result.write(oprot);
-    oprot.writeMessageEnd();
-    oprot.getTransport().flush();
+    if(!isOneway()) {
+      oprot.writeMessageBegin(new TMessage(getMethodName(), TMessageType.REPLY, seqid));
+      result.write(oprot);
+      oprot.writeMessageEnd();
+      oprot.getTransport().flush();
+    }
   }
+
+  protected abstract boolean isOneway();
 
   public abstract TBase getResult(I iface, T args) throws TException;
 
